feat: add blocks cover, footer

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,8 +1,17 @@
-.cover__title {
-  max-width: 560px;
-  font-weight: 900;
-  font-size: 72px;
-  line-height: 1.05;
-  margin: 0 auto 32px;
+.cover__title {  
+  font-weight: 900;  
+  max-width: 255px;
+  margin: 0 auto 16px;
   z-index: 1;
+  font-size: 32px;
+  line-height: 1.09;
+}
+
+@media screen and (min-width: 768px) {
+  .cover__title {
+   max-width: 560px;
+   font-size: 72px;
+   line-height: 1.05;
+   margin-bottom: 32px;
+  }
 }
