--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -23,4 +23,6 @@
   background-color: #2a2c2f;
   max-width: 1280px;
   margin: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
