--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,4 +2,14 @@
   max-width: 360px;
   margin: 0 auto;
   z-index: 1;
+  font-size: 18px;
+  line-height: 1.22;
+}
+
+@media screen and (max-width: 320px) {
+  .cover__subtitle {
+    max-width: 288px;
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
