--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,10 +1,10 @@
 .cover {
-  position: relative;
-  margin: 0 48px;
-  background-image: url(../../images/cover-trains.jpg);
+  position: relative;  
+  background: url(../../images/cover-trains.jpg);
   background-size: cover;
-  width: 100%;
-  min-height: 740px;  
+  max-width: 1184px;
+  min-height: 740px;
+  margin: 0 48px;
   display: flex;
   flex-direction: column;  
   justify-content: center;
@@ -19,8 +19,30 @@
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, .25);
+  transition: background .3s ease;
 }
 
 .cover:hover::after {
   background: rgba(0, 0, 0, .75);
 }
+
+@media screen and (max-width: 1024px) {
+  .cover {
+    max-width: 100%;
+    min-height: 640px;    
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover {   
+    min-height: 480px;   
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover {
+    min-height: 200px;
+  }
+}
+
