--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -26,7 +26,7 @@
 }
 
 .root {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-weight: 400;
   color: #fff;
   background-color: #2a2c2f;
