--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,3 +7,10 @@
 .header__lang-link:not(:last-child) {
   margin-right: 18px;
 }
+
+@media screen and (max-width: 320px) {
+  .header__lang-link {    
+    font-size: 18px;
+    line-height: 1.1;
+  }
+}
