--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,8 +1,9 @@
 .lead__caption {
   font-size: 10px;
-line-height: 1.4;
-margin: 7px 0 0;
-text-transform: uppercase;
+  line-height: 1.4;
+  margin: 7px 0 0;
+  text-transform: uppercase;
+  letter-spacing: 0.15em;
 }
 
 @media screen and (max-width: 928px) {
