--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,3 +7,9 @@
 .place__paragraph:not(:last-child) {
   margin-bottom: 26px;
 }
+
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    font-size: 16px;    
+  }
+}
