--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,6 +5,10 @@
   padding-bottom: 80px;
 }
 
+.place:last-child {
+  padding-bottom: 90px;
+}
+
 @media screen and (max-width: 1024px) {
   .place {
     column-gap: 32px;
@@ -14,6 +18,7 @@
 @media screen and (max-width: 768px) {
   .place {
     column-gap: 28px;
+    padding-bottom: 73px;
   }
 }
 
@@ -21,6 +26,11 @@
   .place {
     grid-template-columns: 1fr;
     row-gap: 32px;
+    padding-bottom: 50px;
+  }
+
+  .place:last-child {
+    padding-bottom: 66px;
   }
 }
 
