--- a/blocks/footer/__list-item/footer__list-item.css
+++ b/blocks/footer/__list-item/footer__list-item.css
@@ -1,6 +1,9 @@
 .footer__list-item {
   font-size: 24px;
   line-height: 1;
+}
+
+.footer__list-item:not(:last-child) {
   margin-bottom: 32px;
 }
 
